fix brilliant cut off

--- a/frontend/web/less/mobile/post.less
+++ b/frontend/web/less/mobile/post.less
@@ -361,13 +361,13 @@
                         }
                     }
                     .icon_brillant{
-                        width: 30px;
-                        height: 30px;
+                        width: 46px;
+                        height: 42px;
                         top: 5px;
                         right: 10px;
                         position: absolute;
                         .count{
-                            width: 100%;
+                            width: 46px;
                             height: 42px;
                             background: url('../../img/icon/brilliant-icon-large.png') no-repeat center;
                             background-size: 40px 35px;
